Update docs folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 desktop.ini
+/.idea/libraries/junit_jupiter_api.xml
+/lpm-noite-terca-pl-6-biblioteca.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
